# housify-web-server

./: .gitignore  README.md  ec_public.pem  pyproject.toml  requirements.txt
docs/src/: conf.py
scripts/: gen_ecdsa256_key.py  gen_ecdsa512_key.py
src/: __main__.py
src/api/: reponses.py  router.py
src/api/endpoints/: __init__.py  credit_card.py  login.py  refresh.py  register.py  request.py  soap.py  subscribe.py  subscriptions.py  user.py
src/core/: housify_service.py  load_env.py  mail_service.py  orm_config.py  redis_client.py
src/data/models/: __init__.py  address.py  billing_info.py  credit_card.py  device.py  device_login.py  invoice.py  payment.py  refresh_token.py  request.py  subscription.py  subscription_lvl.py  user.py
src/data/schemas/: __init__.py  address.py  billing_info.py  credit_card.py  login.py  payment.py  refresh_token.py  request.py  subscription.py  subscription_lvl.py  user.py
src/services/auth/: jwt.py
src/services/crud/: subscription_lvl.py  user.py
src/services/utils/: cutom_openapi.py  hash.py
src/tests/: main_test.py  test_register.py
templates/email/: email.html
